--- a/client/index.html
+++ b/client/index.html
@@ -7,21 +7,55 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Draw-box</title>
 </head>
 <nav class="blue-grey darken-4">
     <div class="nav-wrapper container">
         <a href="#" class="brand-logo center">DrawBox</a>
+        <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul id="nav-mobile" class="left hide-on-med-and-down">
-            <li><a href="#">Some</a></li>
-            <li><a href="#">Components</a></li>
+            <li><a id="brush" href="#">Brush</a></li>
         </ul>
     </div>
 </nav>
+<ul class="sidenav" id="mobile-demo">
+    <li><a href="#">Some</a></li>
+</ul>
 <body class="blue-grey darken-4">
 <div id="cont">
     <canvas id="canvas"></canvas>
+        <div id="brush-set" class="blue-grey darken-4 hide">
+            <h6>Color</h6>
+            <div id="colors">
+                <div id="red" class="color activ"><i class="material-icons check">check</i></div>
+                <div id="green" class="color"></div>
+                <div id="blue" class="color"></div>
+                <div id="yellow" class="color"></div>
+                <div id="magenta" class="color"></div>
+                <div id="white" class="color"></div>
+                <div id="black" class="color"></div>
+            </div>
+            <h6>Brush size</h6>
+            <div class="input-field size-brush">
+                <select class="select-size">
+                    <option value="" disabled selected>Size</option>
+                    <option>3</option>
+                    <option>6</option>
+                    <option>10</option>
+                    <option>16</option>
+                    <option>22</option>
+                    <option>30</option>
+                    <option>50</option>
+                </select>
+            </div>
+            <div id="btns-group">
+                <a class="waves-effect waves-light btn btn-ok">Ok</a>
+                <a class="waves-effect waves-light btn btn-cancel">Cancel</a>
+            </div>
+        </div>
 </div>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
 <script src="draw.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
