--- a/client/index.html
+++ b/client/index.html
@@ -10,24 +10,29 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Draw-box</title>
 </head>
-<nav class="blue-grey darken-4">
-    <div class="nav-wrapper container">
-        <a href="#" class="brand-logo center">DrawBox</a>
-        <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-        <ul id="nav-mobile" class="left hide-on-med-and-down">
-            <li><a id="brush" href="#">Brush</a></li>
-        </ul>
-    </div>
-</nav>
-<ul class="sidenav" id="mobile-demo">
-    <li><a href="#">Some</a></li>
-</ul>
+<div class="nav-wrapper">
+    <nav class="blue-grey darken-4">
+        <div class="nav-wrapper container">
+            <a href="#" class="brand-logo center">DrawBox</a>
+            <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+            <ul id="nav-mobile" class="left hide-on-med-and-down">
+                <li><a class="brush" href="#">Brush</a></li>
+                <li><a class="reg-auth-btn" href="#">Reg/Auth</a></li>
+            </ul>
+        </div>
+    </nav>
+    <ul class="sidenav" id="mobile-demo">
+        <li><a class="brush" href="#">Brush</a></li>
+        <li><a class="reg-auth-btn" href="#">Reg/Auth</a></li>
+    </ul>
+</div>
 <body class="blue-grey darken-4">
 <div id="cont">
     <canvas id="canvas"></canvas>
+        <div class="painting-user"></div>
         <div id="brush-set" class="blue-grey darken-4 hide">
             <h6>Color</h6>
-            <div id="colors">
+            <div id="colors" class="blue-grey darken-4">
                 <div id="red" class="color activ"><i class="material-icons check">check</i></div>
                 <div id="green" class="color"></div>
                 <div id="blue" class="color"></div>
@@ -54,6 +59,48 @@
                 <a class="waves-effect waves-light btn btn-cancel">Cancel</a>
             </div>
         </div>
+    <div id="reg-auth" class="blue-grey darken-4 hide">
+        <div class="row">
+            <div class="col s12">
+                <ul class="tabs blue-grey darken-4">
+                    <li class="tab col s6"><a class="active"  href="#test1">Sign Up</a></li>
+                    <li class="tab col s6"><a href="#test2">Sign In</a></li>
+                </ul>
+            </div>
+            <div id="test1" class="col s12 center-align">
+                <form method="POST" class="row signup-form">
+                    <br>
+                    <div class="input-field col s12">
+                        <input id="username" type="text" name="username" class="validate">
+                        <label for="username">Username</label>
+                    </div>
+                    <div class="input-field col s12">
+                        <input id="password" type="password" name="password" class="validate">
+                        <label for="password">Password</label>
+                    </div>
+                    <button type="submit" class="waves-effect waves-light btn" style="margin-top: 50px">
+                        Sign Up
+                    </button>
+                </form>
+            </div>
+            <div id="test2" class="col s12 center-align">
+                <form method="POST" class="row signin-form">
+                    <br>
+                    <div class="input-field col s12">
+                        <input id="username2" type="text" name="username" class="validate">
+                        <label for="username2">Username</label>
+                    </div>
+                    <div class="input-field col s12">
+                        <input id="password2" type="password" name="password" class="validate">
+                        <label for="password2">Password</label>
+                    </div>
+                    <button type="submit" class="waves-effect waves-light btn" style="margin-top: 50px">
+                        Sign In
+                    </button>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
